--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src",
+    "dev": "tsx watch src --ignore src/lib",
     "build": "tsc",
     "start": "node ."
   },
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
-    "tsx": "^4.20.4"
+    "tsx": "^4.20.4",
+    "winston": "^3.17.0"
   }
 }
